Bug 101884 - User defined border control has problems with keyboard navigation
Summary: User defined border control has problems with keyboard navigation
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0, target:5.1.6 target:5.2.3
Keywords: accessibility, bibisectRequest, regression
Depends on:
Blocks: a11y, Accessibility
  Show dependency treegraph
 
Reported: 2016-09-04 01:19 UTC by Yousuf Philips (jay) (retired)
Modified: 2016-10-06 14:33 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2016-09-04 01:19:58 UTC
Steps:
1) Open writer
2) right-click > Paragraph > Borders
3) Press tab so focus is in the user-defined border control and it will enable the left border
4) Press up or press right and then left and then it isnt possible to navigate or activate/deactivate borders

Regression as this worked in 4.0.6.

Version: 5.3.0.0.alpha0+
Build ID: f7513f0f53f2d074c08610a68fb787bb379c31d4
CPU Threads: 2; OS Version: Linux 3.19; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-09-02_23:58:05
Locale: en-US (en_US.UTF-8); Calc: group
Comment 1 Aron Budea 2016-09-12 04:54:40 UTC
Reproduced in v4.1.0.3 and master daily builds, not reproduced in v4.0.0.3 / Ubuntu 16.04.
Comment 2 Commit Notification 2016-09-27 19:50:00 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f20996450e409406f4f55f9eb7ca9bfe1e455c35

Resolves: tdf#101884 keyboard navigation in User defined border control

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Caolán McNamara 2016-09-27 20:03:12 UTC
*** Bug 101171 has been marked as a duplicate of this bug. ***
Comment 4 Yousuf Philips (jay) (retired) 2016-09-28 06:28:17 UTC
@Caolan: Please backport to 5.2 and 5.1.
Comment 5 Commit Notification 2016-10-04 11:29:51 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0620f7ca99eca6c8fe00a99b999ad74b8847ffe4&h=libreoffice-5-1

Resolves: tdf#101884 keyboard navigation in User defined border control

It will be available in 5.1.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Yousuf Philips (jay) (retired) 2016-10-04 16:20:52 UTC
Version: 5.3.0.0.alpha0+
Build ID: f309531cfe1d6a1b6ea1306d45ed3e121145bc5f
CPU Threads: 4; OS Version: Linux 4.4; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-10-04_03:52:18
Locale: en-US (en_US.UTF-8); Calc: group
Comment 7 Commit Notification 2016-10-06 14:33:30 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d0f2707c2a649778fe8bc47a187ceb2e6a90aaf7&h=libreoffice-5-2

Resolves: tdf#101884 keyboard navigation in User defined border control

It will be available in 5.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.