Resolves: tdf#101884 keyboard navigation in User defined border control

Change-Id: I92ea37754f057c560d19b41f814a1d649ea74876
(cherry picked from commit f20996450e409406f4f55f9eb7ca9bfe1e455c35)
Reviewed-on: https://gerrit.libreoffice.org/29345
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 0620f7ca99eca6c8fe00a99b999ad74b8847ffe4)